--- a/docs/01.语言/01.Go/06.Sync.Mutex.md
+++ b/docs/01.语言/01.Go/06.Sync.Mutex.md
@@ -13,7 +13,7 @@ author:
 ---
 
 ## 一、简述
-* Mutex 是一种相对原始的同步机制，只有基础的同步功能，更高级别的同步最好通过 Channel 来实现；
+* Mutex 是一种相对原始的同步机制，只有基础的同步功能，<span style="color: red;">**更高级别的同步最好通过 Channel 来实现**</span>；
 * 锁的对象被创建后，不允许复制；
 * 解锁一个未加锁的对象，会出现错误；
 
@@ -21,14 +21,14 @@ author:
 * Mutex 可以处于 2 种操作模式：正常和饥饿。
 * 在正常模式下：
   * 等待的 goroutine 按照先进先出的顺序排队，但是被唤醒的 goroutine 不会立即拥有互斥锁，而是与新到来的 goroutine 竞争锁的所有权；
-  * 因为新到来的 goroutine 有一个优势，它们已经在CPU上运行，并且可能有很多个，所以被唤醒的 goroutine 有可能失败，新到来的 goroutine 拿到锁后继续运行，能够避免上下文的切换；
-  * 在这种情况下，被唤醒的 goroutine 会在等待队列的前面排队，如果等的 goroutine 超过 1 毫秒未能获取互斥锁，则会将互斥锁切换到饥饿模式；
+  * <span style="color: red;">**因为新到来的 goroutine 有一个优势，它们已经在CPU上运行，并且可能有很多个，所以被唤醒的 goroutine 有可能失败，新到来的 goroutine 拿到锁后继续运行，能够避免上下文的切换**</span>；
+  * 在这种情况下，被唤醒的 goroutine 会在等待队列的前面排队，<span style="color: red;">如果等的 goroutine 超过 1 毫秒未能获取互斥锁，则会将互斥锁切换到饥饿模式</span>；
 * 在饥饿模式下：
   * 互斥锁的所有权直接从解锁的 goroutine 移交给队列前面等待的 goroutine；
   * 新到来的 goroutine 不会尝试获取互斥锁，也不会自旋，它们将自己排在等待队列的尾部；
-  * 如果获得锁的 goroutine 是等待队列中的最后一个，或是等待时间少于 1 ms，则会将互斥锁切换回正常模式；
+  * <span style="color: red;">**如果获得锁的 goroutine 是等待队列中的最后一个，或是等待时间少于 1 ms，则会将互斥锁切换回正常模式**</span>；
 * 正常模式具有更好的性能，因为即使有其他阻塞的 goroutine 等待，当前 goroutine 也可以连续多次获取互斥锁；
-* 饥饿模式对于预防尾部延迟具有很好的作用，能够避免等待的 goroutine 饿死；
+* 饥饿模式对于预防尾部延迟具有很好的作用，<span style="color: red;">**能够避免等待的 goroutine 饿死**</span>；
 
 ## 三、基本用法
 ```go
@@ -53,8 +53,8 @@ const (
 )
 ```
 * **Mutex 是互斥锁，其零值是未锁的状态，首次使用后不能被复制**；
-* `mutexLocked, mutexWoken, mutexStarving` 分别是用于 `stat` 二进制位中低位 1、2、3 标志位；
-* `mutexWaiterShift` 用于记录等待的 goroutine 数量，程序中先右位运算后加到 `stat`，即 `stat` 二进制位中低位第四位开始，有多少个 1 则有多少等待的 goroutine；
+* <span style="color: red;">**`mutexLocked, mutexWoken, mutexStarving` 分别是用于 `stat` 二进制位中低位 1、2、3 标志位**</span>；
+* <span style="color: red;">**`mutexWaiterShift` 用于记录等待的 goroutine 数量，程序中先右位运算后加到 `stat`，即 `stat` 二进制位中低位第四位开始，有多少个 1 则有多少等待的 goroutine**</span>；
 
 ### 2，Lock()
 :::details
@@ -170,17 +170,17 @@ func (m *Mutex) lockSlow() {
 * 自旋：
   * 在正常模式下，且锁是 `muteLocked` 状态，且符合自旋条件才会自旋；
   * `runtime_canSpin` 链接到 `sync_runtime_canSpin` 运行时函数，判断自旋条件：
-    * 1)，自旋次数要不大于 4 次，防止某个 goroutine 长时间占用 CPU 资源导致其他 goroutine 长时间被阻塞；
-    * 2)，CPU 核数要大于 1，单核没法多线程运行，更没法自旋；
-    * 3)，设置的 P 的最大数要大于空闲 P 的数量+自旋 P 的数量+1，表示当前 goroutine 可以自旋等待一个新的 P ；
-    * 4)，当前 goroutine 所在的 P 的本地队列（run queue）要为空，防止当前 goroutine 可以从自己所在的 P 的本地队列中获取任务而不必自旋等待；
-  * 自旋过程中不断的尝试将锁的状态更新完为 `mutexWoken`，并重新获取锁状态以及记录自旋次数，最多自旋四次；
+    * 1)，<span style="color: red;">自旋次数要不大于 4 次</span>，防止某个 goroutine 长时间占用 CPU 资源导致其他 goroutine 长时间被阻塞；
+    * 2)，<span style="color: red;">CPU 核数要大于 1</span>，单核没法多线程运行，更没法自旋；
+    * 3)，<span style="color: red;">设置的 P 的最大数要大于空闲 P 的数量+自旋 P 的数量+1</span>，表示当前 goroutine 可以自旋等待一个新的 P ；
+    * 4)，<span style="color: red;">当前 goroutine 所在的 P 的本地队列（run queue）要为空</span>，防止当前 goroutine 可以从自己所在的 P 的本地队列中获取任务而不必自旋等待；
+  * 自旋过程中不断的尝试将锁的状态更新完为 `mutexWoken`，并重新获取锁状态以及记录自旋次数，**最多自旋四次**；
 * 计算锁状态：
   * 根据当前锁的状态分别计算上述三个标志位的状态值；
   * 以及增加等待者数量；
 * 更新锁并获取锁：
   * 尝试更新锁的状态，如果是在唤醒状态更新成功的话直接退出；
-  * 否则需要计算等待时间，判断是否需要将饥饿模式切换为正常模式；
+  * <span style="color: red;">否则需要计算等待时间，判断是否需要将饥饿模式切换为正常模式</span>；
 
 ### 3, UnLock()
 :::details
@@ -238,10 +238,10 @@ func (m *Mutex) unlockSlow(new int32) {
 * 解锁一个未加锁的 `Mutex` 会抛出一个错误；
 * 慢解锁路径分为正常和饥饿两种模式的情况：
   * 正常模式：
-    * 如果没有 goroutine 等待，或者有等待的 goroutine 但 `mutexLocked mutexWoken mutexStarving` 标志位不全为 0，则无需唤醒其他等待的 goroutine 直接返回，此时有肯定有 goroutine 在慢加锁路径中尝试加锁；
+    * <span style="color: red;">如果没有 goroutine 等待，或者有等待的 goroutine 但 `mutexLocked mutexWoken mutexStarving` 标志位不全为 0，则无需唤醒其他等待的 goroutine 直接返回，此时有肯定有 goroutine 在慢加锁路径中尝试加锁</span>；
     * 否则，将等待的 goroutine 数量减一，并尝试设置锁为 `mutexWoken`以及唤醒等待的 goroutine，并移交锁的所有权；
   * 饥饿模式：
-    * 直接将锁的所有权交给等待队列中的第一个 goroutine；
+    * <span style="color: red;">直接将锁的所有权交给等待队列中的第一个 goroutine</span>；
 
 ### 4, Locker
 ```go
