--- a/docs/01.语言/01.Go/00.Go的基本介绍.md
+++ b/docs/01.语言/01.Go/00.Go的基本介绍.md
@@ -47,21 +47,27 @@ author:
 
   nil // 一个预先声明的标识符，表示指针、通道、func、接口、映射或切片类型的零值
   ```
+
 ## 二、数据结构
 ### 1, slice
 * 切片，用于存储一组同类型数据；
 * 底层主要是长度、容量、指向数组的指针组成，当触发扩容时，该指针的值会发生变化；
 
-### 2, map
+### 2, 数组
+* 固定容量的切片，或是根据存储的数据长度自动推导容量大小；
+* 没有 append 函数，不会触发扩容；
+* 只能通过索引访问、修改、添加元素；
+
+### 3, map
 * 映射结构，用于存储 key、value 的键值对，key 的类型相同，value 的类型也要相同，key 和 value 类型可以不同；
 * 底层主要是通过数组和哈希的方式实现，并通过链接地址法处理哈希冲突，同时 key 和 value 是分开存储的，以方便内存对齐和内存回收；
 * 当 map 的负载因子达到一定值时会触发扩容；
 
-### 3, struct
+### 4, struct
 * 结构体类型，用于存储不同类型的数据；
 * 空结构体的大小为 0；
 
-### 4, interface
+### 5, interface
 * 接口类型，用于定义对象的行为和方法集合；
 * 接口提供了一种方式来实现多态性，允许不同的类型以不同的方式进行交互；
 * 接口定义了一个或多个方法的签名，但没有具体的实现，任何类型只要实现了接口中定义的所有方法，就被认为是该接口类型的实现；
@@ -118,7 +124,29 @@ author:
 * ``；
 ### 15, imag
 * ``；
+
 ## 四、同步原语
+### 1，Mutex
 
-## 五、
+### 2，RWMutex
 
+### 3, WaitGroup
+
+### 4, Cond
+
+### 5, Pool
+
+### 6, atomic
+
+## 五、关键字
+### 1, for
+
+### 2, range
+
+### 3, defer
+
+### 4, select
+
+### 5, channel
+
+### 6, reflect
