--- a/docs/01.语言/01.Go/00.Go的基本介绍.md
+++ b/docs/01.语言/01.Go/00.Go的基本介绍.md
@@ -168,15 +168,19 @@ author:
 ## 四、同步原语
 ### 1，Mutex
 * 互斥锁，同一时刻只能被一个 goroutine 拥有；
+* 写写、写读、读读均互斥；
 ### 2，RWMutex
-
+* 读写锁，同一时刻只能被一个写 goroutine 拥有，或同时被多个读 goroutine 拥有；
+* 写写、写读互斥，读读不互斥；
 ### 3, WaitGroup
+* 用于等待一组 goroutine 的返回，例如并发请求后等待结果返回再统一处理；
+### 4，Once
+* 用于保证运行期间，某段代码只执行一次，例如初始化某个配置；
+### 5, Cond
 
-### 4, Cond
+### 6, Pool
 
-### 5, Pool
-
-### 6, atomic
+### 7, atomic
 
 ## 五、关键字
 ### 1, for
