--- a/docs/01.语言/01.Go/01.Slice(一).md
+++ b/docs/01.语言/01.Go/01.Slice(一).md
@@ -6,6 +6,7 @@ categories:
   - Go
 tags:
   - Go
+  - container
 author: 
   name: erlangtui
   link: https://github.com/zhangliang6666
@@ -59,7 +60,6 @@ func main() {
 
 ## 二、扩容
 ### 1，append
-
 - append函数返回值是一个新的slice，Go编译器不允许调用了 append 函数后不使用返回值；
 ### 2，growslice扩容逻辑
 > - go1.17.13，runtime/slice.go，181行
