--- a/docs/01.语言/01.Go/09.sync.Once.md
+++ b/docs/01.语言/01.Go/09.sync.Once.md
@@ -20,15 +20,28 @@ author:
 * go1.17.13 版本；
 
 ## 二、基本原理
-* 通过原子计数和互斥锁的方式，记录函数 f 执行的次数，当计数为 0 时，加锁、计数并执行函数 f，即使函数 f panic 了也只会执行一次；
+* 通过原子计数和互斥锁的方式，记录函数 f 执行的次数，当计数为 0 时，加锁、计数并执行函数 f，<span style="color: red;">**即使函数 f panic 了也只会执行一次</span>；
 * <span style="color: red;">Once 首次使用后不允许被复制；</span>
 
 ## 三、基本用法
 ::: details
 ```go
+package main
+
+import (
+	"sync"
+)
+
+func initConfig() {
+}
+func main() {
+	var one sync.Once
+	one.Do(initConfig)
+}
 ```
 :::
-* 在主 goroutine 中要先执行`Add` 操作，再执行`Wait`操作；
+* 该函数只能作为参数传递给`Do`函数才能保证只会被执行一次，如果是在其他地方继续调用则无法保证；
+* 即使多次执行`one.Do(initConfig)`操作，该函数也只会被执行一次；
 
 ## 四、源码解读
 ### 1, Once
@@ -48,7 +61,6 @@ type Once struct {
 ### 2, Do
 :::details
 ```go
-
 // Do 当且仅当 Do 是首次为 Once 实例调用 Do 时，Do 才会调用函数 f。
 // 换句话说，给定 var once Once，如果 once.Do(f) 被多次调用，只有第一次调用才会调用 f，即使 f 在每次调用中都有不同的值。
 // 每个函数都需要一个新的 Once 实例才能执行。
@@ -83,4 +95,10 @@ func (o *Once) doSlow(f func()) {
 }
 ```
 :::
-* <span style="color: red;">**如果计数器变为零，则释放所有在 Wait 上阻塞的 goroutine；如果计数器变为负数，则 Add panic；**</span>
+* 采用原子操作判断`done`是否为 0，不为 0 则说明已经执行过 f 直接返回；
+* 为 0 则说明还没执行 f，转入慢路径执行；
+* 慢路径执行时，先加锁，再次判断`done`是否为 0，避免再加锁期间 f 被其他 goroutine 执行完成；
+* 采用 defer 函数使`done`原子加一，再执行 f 函数，即使函数 f panic 了，`done` 的加一操作也能执行成功；
+* <span style="color: red;">**采用互斥锁而不是 cas 的原因是保证`Done`返回时，函数 f 一定是执行完成的；
+  * 互斥锁能够让其他 goroutine 阻塞等待，阻塞结束后 f 一定是执行完成的**</span>；
+  * 其他 goroutine 通过 cas 获取不到值时，则是直接返回，此时 f 可能还没有执行完成；
