--- a/docs/01.语言/01.Go/05.Sync.Map.md
+++ b/docs/01.语言/01.Go/05.Sync.Map.md
@@ -12,11 +12,12 @@ author:
   name: erlangtui
   link: https://github.com/erlangtui
 ---
-
+::: tip
+本文代码基于 go1.17.13，sync/map.go
+:::
 ## 一、简述
 * Map 类似于 Go `map[interface{}]interface{}` 以哈希表的方式存储键值对，但可以安全地由多个 goroutines 并发使用，无需额外的加锁；
 * 传统的 map 需要对整个 map 加锁，才能解决并发安全的问题，锁的粒度较大；
-* go1.17.13 版本；
 
 ## 二、基本原理
 * <span style="color: red;">**Map 主要是以空间换时间，对读的部分采用原子操作和原子计数，对写的部分采用互斥锁，通过读写分离来降低锁的粒度，从而提高读写效率，适用于写少读多的场景**</span>；
