--- a/docs/01.语言/01.Go/06.Sync.Mutex.md
+++ b/docs/01.语言/01.Go/06.Sync.Mutex.md
@@ -12,13 +12,14 @@ author:
   name: erlangtui
   link: https://github.com/erlangtui
 ---
-
+::: tip
+本文代码基于 go1.17.13，sync/mutex.go
+:::
 ## 一、简述
 * Mutex 互斥锁，同一时刻只能被一个 goroutine 拥有；
 * 是一种相对原始的同步机制，只有基础的同步功能，<span style="color: red;">**更高级别的同步最好通过 Channel 来实现**</span>；
 * 锁的对象被创建后，不允许复制；
 * 解锁一个未加锁的对象，会出现错误；
-* go1.17.13 版本；
 
 ## 二、基本原理
 * Mutex 可以处于 2 种操作模式：正常和饥饿。
