--- a/docs/01.语言/01.Go/07.Sync.RWMutex.md
+++ b/docs/01.语言/01.Go/07.Sync.RWMutex.md
@@ -12,12 +12,13 @@ author:
   name: erlangtui
   link: https://github.com/erlangtui
 ---
-
+::: tip
+本文代码基于 go1.17.13，sync/rwmutex.go
+:::
 ## 一、简述
 * RWMutex 是一个读写互斥锁，锁可以被多个读 goroutine 同时拥有或被单个写 goroutine 拥有，但不能同时被读写 goroutine 拥有，即：<span style="color: red;">**写写互斥、写读互斥，只有读读是不互斥的**</span>；
 * RWMutex 的零值是解锁的互斥锁，在首次使用后不得复制；
 * RWMutex 适合<span style="color: red;">**读多写少**</span>的情况；
-* go1.17.13 版本；
 
 ## 二、基本原理
 * <span style="color: red;">写 goroutine 获取锁后会阻止其他写 goroutine 继续获得锁，这是通过互斥锁实现的，同时还会阻止其他读 goroutine 获得锁，此时读 goroutine 只能阻塞等待，直到该写 goroutine 释放锁后来唤醒读 goroutine，此时再来写 goroutine 尝试获取锁，只能排在这些读 goroutine 之后</span>；
