--- a/docs/01.语言/01.Go/08.sync.WaitGroup.md
+++ b/docs/01.语言/01.Go/08.sync.WaitGroup.md
@@ -12,11 +12,12 @@ author:
   name: erlangtui
   link: https://github.com/erlangtui
 ---
-
+::: tip
+本文代码基于 go1.17.13，sync/waitgroup.go
+:::
 ## 一、简述
 * 主 goroutine 阻塞等待一组 goroutine 完成后，再进行后续操作；
 * 常用于对多个服务并发请求后，等待返回后的结果在进行后续处理；
-* go1.17.13 版本；
 
 ## 二、基本原理
 * 通过原子操作记录当前正在执行的 goroutine 的数量和等待的 goroutine 数量，当正在执行的 goroutine 计数不为 0 时，主 goroutine 阻塞等待；当正在执行的 goroutine 计数为 0 时唤醒等待的主 goroutine，并检测该计数是否为 0，以防止在主 goroutine 阻塞等待期间`WaitGroup`被其他 goroutine 复用；
