--- a/docs/01.语言/01.Go/09.sync.Once.md
+++ b/docs/01.语言/01.Go/09.sync.Once.md
@@ -13,11 +13,12 @@ author:
   link: https://github.com/erlangtui
 ---
 
-
+::: tip
+本文代码基于 go1.17.13，sync/once.go
+:::
 ## 一、简述
 * 保证某段代码在程序执行期间只执行一次；
 * 常用于服务启动时的配置初始化操作；
-* go1.17.13 版本；
 
 ## 二、基本原理
 * 通过原子计数和互斥锁的方式，记录函数 f 执行的次数，当计数为 0 时，加锁、计数并执行函数 f，<span style="color: red;">**即使函数 f panic 了也只会执行一次</span>；
