--- a/docs/01.语言/01.Go/10.sync.Cond.md
+++ b/docs/01.语言/01.Go/10.sync.Cond.md
@@ -12,14 +12,15 @@ author:
   link: https://github.com/erlangtui
 ---
 
-
+::: tip
+本文代码基于 go1.17.13，sync/cond.go
+:::
 ## 一、简述
 * Cond 实现了一个条件变量，可以让一组阻塞等待的 goroutine 在满足条件的情况下被唤醒；
 * WaiteGroup 是主 goroutine 阻塞等待，直到所有子 goroutine 执行完毕；
 * 与 WaiteGroup 相反，Cond 可以让子 goroutine 阻塞等待，直到主 goroutine 发出信号才会被唤醒；
 * 通常与sync.Mutex结合使用，用于在多个协程之间进行通信和同步；
 * <span style="color: red;">**相比于 for 循环实现的忙等待来说，Cond 能够让 goroutine 阻塞等待，让出 CPU 的使用权；**</span>
-* go1.17.13 版本；
 
 ## 二、基本原理
 * 通过原子操作记录当前正在执行的 goroutine 的数量和等待的 goroutine 数量，当正在执行的 goroutine 计数不为 0 时，主 goroutine 阻塞等待；当正在执行的 goroutine 计数为 0 时唤醒等待的主 goroutine，并检测该计数是否为 0，以防止在主 goroutine 阻塞等待期间`WaitGroup`被其他 goroutine 复用；
