--- a/docs/01.语言/01.Go/11.sync atomic.md
+++ b/docs/01.语言/01.Go/11.sync atomic.md
@@ -27,6 +27,7 @@ author:
 * 具体原理取决于底层硬件和操作系统的支持，通常涉及到对内存的原子读写操作，以及对特定寄存器或内存位置的锁定和解锁；
 
 ## 三、基本用法
+:::details
 ```go
 package main
 
@@ -53,6 +54,7 @@ func main() {
 }
 // output: Counter: 100
 ```
+:::
 * 使用`atomic.AddInt64`函数对 counter 变量进行原子加法操作，并使用`atomic.LoadInt64`函数原子地读取 counter 的值；
 * 通过使用原子操作，确保了并发访问 counter 变量时的数据一致性和安全性；
 
