--- a/docs/01.语言/01.Go/00.Go的基本介绍.md
+++ b/docs/01.语言/01.Go/00.Go的基本介绍.md
@@ -13,7 +13,14 @@ author:
   link: https://github.com/erlangtui
 ---
 
-## 一、数据类型
+## 一、语言特性
+### 1，并发性
+
+### 2，垃圾回收
+
+### 3，快速编译
+
+## 二、数据类型
 * go 是一种强类型语言，数据类型之间有着严格的区分；
 * 常见的数据类型有：
   ```go
@@ -48,7 +55,7 @@ author:
   nil // 一个预先声明的标识符，表示指针、通道、func、接口、映射或切片类型的零值
   ```
 
-## 二、数据结构
+## 三、数据结构
 ### 1, slice
 * 切片，用于存储一组同类型数据；
 * 底层主要是长度、容量、指向数组的指针组成，当触发扩容时，该指针的值会发生变化；
@@ -73,7 +80,7 @@ author:
 * 接口定义了一个或多个方法的签名，但没有具体的实现，任何类型只要实现了接口中定义的所有方法，就被认为是该接口类型的实现；
 * 所有类型均是空接口的实现；
 
-## 三、内置函数
+## 四、内置函数
 ### 1, append
 * `func append(slice []Type, elems ...Type) []Type`；
 * append 内置函数将元素追加到切片的末尾；
@@ -165,7 +172,7 @@ author:
 * `func imag(c ComplexType) FloatType`；
 * imag 内置函数返回复数 c 的虚部，返回值将是与 c 类型对应的浮点类型；
 
-## 四、同步原语
+## 五、同步原语
 ### 1，Mutex
 * 互斥锁，同一时刻只能被一个 goroutine 拥有；
 * 写写、写读、读读均互斥；
@@ -182,7 +189,7 @@ author:
 
 ### 7, atomic
 
-## 五、关键字
+## 六、关键字
 ### 1, for
 
 ### 2, range
