--- a/docs/05.更多/04.nginx.md
+++ b/docs/05.更多/04.nginx.md
@@ -10,6 +10,7 @@ author:
   name: erlangtui
   link: https://github.com/erlangtui
 ---
+* nginx 配置详细介绍
 ```nginx
 #user  nobody;
 worker_processes  1;
