--- a/docs/01.语言/01.Go/00.Go的基本介绍.md
+++ b/docs/01.语言/01.Go/00.Go的基本介绍.md
@@ -15,6 +15,8 @@ author:
 
 ## 一、语言特性
 ### 1，并发性
+* go 语言提供了 goroutine 和 GMP 模型，用户可以很轻松的创建多个 goroutine 并发执行，用户态的 M 个 goroutine 通过 GMP 模型调度运行在内核态的 N 个线程上，
+
 
 ### 2，垃圾回收
 
