--- a/docs/01.语言/01.Go/00.Go的基本介绍.md
+++ b/docs/01.语言/01.Go/00.Go的基本介绍.md
@@ -14,13 +14,34 @@ author:
 ---
 
 ## 一、语言特性
-### 1，并发性
-* go 语言提供了 goroutine 和 GMP 模型，用户可以很轻松的创建多个 goroutine 并发执行，用户态的 M 个 goroutine 通过 GMP 模型调度运行在内核态的 N 个线程上，
+### 1，简洁易读
+* go语言通过设计简洁、清晰的语法和标准库，使得代码更加易读易写；
+* 同时，还避免了一些语言中常见的复杂特性和概念，如继承和多态等，采用接口实现多态性，减少了冗余代码，提高了代码的可读性；
 
+### 2，并发支持
+* go语言内置了原生的并发支持，主要是通过 goroutine 和 channel 实现的；
+* goroutine 是一种轻量级的线程，与传统的线程相比，goroutine 的创建和销毁开销更小，因此可以高效地运行成千上万个并发任务，并且可以非常简单的创建一个 goroutine；
+* **通过 GMP 调度模型，让用户态的 N 个 goroutine 运行在内核态的 M 个线程上，使得并发任务 goroutine 的切换发生在用户态**；
+* **channel 则提供了在多个 goroutine 之间进行通信和数据交换的机制，避免了共享内存带来的竞争和同步问题**；
 
-### 2，垃圾回收
+### 3，内存管理
+* go 语言具有自动垃圾回收（Garbage Collection）机制，**它基于引用计数和标记-清除算法，定期对无用的对象进行回收，释放内存空间**；
+* 开发者无需手动管理内存分配与释放，这减轻了开发负担，同时也降低了内存泄漏和指针错位等问题的风险；
 
-### 3，快速编译
+### 4，高效编译
+* go 语言拥有快速的编译速度，主要是因为它采用了**基于单一静态链接库**的模块化设计，这种设计方式可以减少编译和链接时的依赖关系，提高编译速度；
+* go 语言还采用了**增量式编译和缓存技术**，可以减少重复编译和提高构建速度。
+
+### 5，跨平台支持
+* go 语言提供了丰富的标准库和操作系统接口，可以直接调用操作系统功能，从而实现跨平台支持；
+* go 语言提供了对多种操作系统的支持，包括Linux、Windows、macOS等，还提供了对不同 CPU 架构的支持，如x86、ARM等；
+
+### 6，静态类型和类型推断
+* go 语言是一种静态类型语言，可以在编译阶段发现一些类型错误，避免了一些运行期错误；
+* go 语言还支持类型推断，可以根据上下文自动推导变量的类型，大大简化了代码书写，同时也保留了静态类型语言的安全性；
+
+### 7，强大的工具链
+* go 语言提供了丰富的工具链，包括**格式化工具、测试工具、性能分析工具**等，这些工具能够帮助开发者编写、测试和优化代码，使得开发过程更加高效和可控；
 
 ## 二、数据类型
 * go 是一种强类型语言，数据类型之间有着严格的区分；
