--- a/docs/01.语言/01.Go/00.Go的基本介绍.md
+++ b/docs/01.语言/01.Go/00.Go的基本介绍.md
@@ -79,49 +79,49 @@ author:
   ```
 
 ## 三、数据结构
-### 1, slice
+### 1，slice
 * 切片，用于存储一组同类型数据；
 * 底层主要是长度、容量、指向数组的指针组成，当触发扩容时，该指针的值会发生变化；
 
-### 2, 数组
+### 2，数组
 * 固定容量的切片，或是根据存储的数据长度自动推导容量大小；
 * 没有 append 函数，不会触发扩容；
 * 只能通过索引访问、修改、添加元素；
 
-### 3, map
+### 3，map
 * 映射结构，用于存储 key、value 的键值对，key 的类型相同，value 的类型也要相同，key 和 value 类型可以不同；
 * 底层主要是通过数组和哈希的方式实现，并通过链接地址法处理哈希冲突，同时 key 和 value 是分开存储的，以方便内存对齐和内存回收；
 * 当 map 的负载因子达到一定值时会触发扩容；
 
-### 4, struct
+### 4，struct
 * 结构体类型，用于存储不同类型的数据；
 * 空结构体的大小为 0；
 
-### 5, interface
+### 5，interface
 * 接口类型，用于定义对象的行为和方法集合；
 * 接口提供了一种方式来实现多态性，允许不同的类型以不同的方式进行交互；
 * 接口定义了一个或多个方法的签名，但没有具体的实现，任何类型只要实现了接口中定义的所有方法，就被认为是该接口类型的实现；
 * 所有类型均是空接口的实现；
 
 ## 四、内置函数
-### 1, append
+### 1，append
 * `func append(slice []Type, elems ...Type) []Type`；
 * append 内置函数将元素追加到切片的末尾；
 * 如果切片有足够的容量，则直接将新元素添加到底层数组；
 * 如果没有，将触发扩容分配一个新的底层数组，此时指向数组的指针指会发生改变，append 返回更新后的切片；
 
-### 2, copy
+### 2，copy
 * `func copy(dst, src []Type) int`；
 * copy 内置函数将元素从源切片复制到目标切片中；
 * 作为特殊情况，它还会将字节从字符串复制到字节切片；
 * 源和目标可能重叠，可能会出现意想不到的情况；
 * copy 返回复制的元素数，即 len（src） 和 len（dst） 的最小值；
 
-### 3, delete
+### 3，delete
 * `delete(m map[Type]Type1, key Type)`；
 * delete 内置函数从映射中删除具有指定键 `m[key]` 的元素。如果 `m` 为 `nil` 或没有此类元素，则 delete 为空操作。
 
-### 4, len
+### 4，len
 * `func len(v Type) int`；
 * len 内置函数根据其类型返回 v 的长度：
   * 数组或数组指针：v 中的元素数量；
@@ -129,18 +129,18 @@ author:
   * string：v 中的字节数；
   * channel：通道缓冲区中排队（未读）的元素数，如果 v 为 nil，则 len（v） 为零。
 
-### 5, cap
+### 5，cap
 * `func cap(v Type) int`；
 * cap 内置函数根据其类型返回 v 的容量：
   * 数组或数组指针：v 中的元素数量；（与 len（v） 相同）；
   * slice：可以达到的最大长度，如果 v 为 nil，则 cap（v） 为零；
   * channel：通道缓冲区容量，如果 v 为 nil，则 cap（v） 为零；
 
-### 6, new
+### 6，new
 * `func new(Type) *Type`；
 * 用来分配内存，第一个参数是类型，而不是值，返回的值是指向该类型新分配的零值的指针；
 
-### 7, make
+### 7，make
 * `func make(t Type, size ...IntegerType) Type`；
 * 用来分配并初始化`slice、map、chan`类型的对象；
 * 与 new 一样，第一个参数是类型，而不是值；与 new 不同的是，make 的返回类型与其参数的类型相同，而不是指向它的指针；
@@ -149,14 +149,14 @@ author:
   * `map`：为空 map 分配足够的空间来容纳指定数量的元素，可以省略 size，在这种情况下，将分配较小的起始大小；
   * `chan`：通道的缓冲区使用指定的缓冲区容量进行初始化，如果为零或省略大小，则通道无缓冲；
 
-### 8, close
+### 8，close
 * `func close(c chan<- Type)`；
 * close 内置函数关闭通道，该通道必须是双向的或仅发送的；
 * 通道应该只由发送方执行，而不是由接收方执行，并且具有在接收到最后一个发送的值后关闭通道的效果；
 * 从关闭后的通道 c 接收到最后一个值后，c 的任何接收 goroutine 都将成功接收到通道元素的零值，而不会被阻塞；
 * 对于关闭后的通道，x, ok := <-c 会将 ok 设置为 false；
 
-### 9, panic
+### 9，panic
 * `func panic(v interface{})`；
 * panic 内置函数停止当前 goroutine 的正常执行；
 * 当函数 F 调用 panic 时，F 的正常执行会立即停止，任何被 F 延迟执行的函数都以平常的方式运行，然后 F 返回给其调用方；
@@ -164,7 +164,7 @@ author:
 * 这种情况一直持续到执行 goroutine 中的所有函数以相反的顺序停止为止，此时，程序将终止，并带有非零退出代码；
 * 此终止序列称为 panicking，可通过内置函数 recover 进行捕获；
 
-### 10, recover
+### 10，recover
 * `func recover() interface{}`；
 * recover 内置函数允许程序管理 goroutine 的 panic 行为，且只能捕获当前 goroutine，无法夸 goroutine；
 * 在延迟函数（但不是它调用的任何函数）中执行恢复调用会通过恢复正常执行来停止 panic 序列，并检索传递给 panic 调用的错误值；
@@ -172,26 +172,26 @@ author:
 * 当 goroutine 没有 panic ，或者 panic 的参数为 nil，则 recover 返回 nil；
 * recover 的返回值能够说明 goroutine 是否处于 panic 状态；
 
-### 11, print
+### 11，print
 * `func print(args ...Type)`；
 * print 内置函数以特定地实现方式格式化其参数，并将结果写入标准错误；
 
-### 12, println
+### 12，println
 * `func println(args ...Type)`；
 * println 内置函数以特定地实现方式格式化其参数，并将结果写入标准错误；
 * 始终在参数之间添加空格，并附加换行符；
 
-### 13, complex
+### 13，complex
 * `func complex(r, i FloatType) ComplexType`；
 * complex 内置函数从两个浮点值构造一个复数值；
 * 实部和虚部必须具有相同的大小，即 float32 或 float64；
 * 并且返回值将是相应的复数类型（float32 为 complex64，float64 为 complex128）；
 
-### 14, real
+### 14，real
 * `func real(c ComplexType) FloatType`；
 * real 内置函数返回复数 c 的实数部分，返回值将是与 c 类型对应的浮点类型；
 
-### 15, imag
+### 15，imag
 * `func imag(c ComplexType) FloatType`；
 * imag 内置函数返回复数 c 的虚部，返回值将是与 c 类型对应的浮点类型；
 
@@ -202,28 +202,28 @@ author:
 ### 2，RWMutex
 * 读写锁，同一时刻只能被一个写 goroutine 拥有，或同时被多个读 goroutine 拥有；
 * 写写、写读互斥，读读不互斥；
-### 3, WaitGroup
+### 3，WaitGroup
 * 用于等待一组 goroutine 的返回，例如并发请求后等待结果返回再统一处理；
 ### 4，Once
 * 用于保证运行期间，某段代码只执行一次，例如初始化某个配置；
-### 5, Cond
+### 5，Cond
 
-### 6, Pool
+### 6，Pool
 
-### 7, atomic
+### 7，atomic
 
 ## 六、关键字
-### 1, for
+### 1，for
 
-### 2, range
+### 2，range
 
-### 3, defer
+### 3，defer
 
-### 4, select
+### 4，select
 
-### 5, channel
+### 5，channel
 
-### 6, reflect
+### 6，reflect
 
 ::: tip
 持续更新中……
