--- a/docs/01.语言/01.Go/09.sync.Once.md
+++ b/docs/01.语言/01.Go/09.sync.Once.md
@@ -100,6 +100,6 @@ func (o *Once) doSlow(f func()) {
 * 为 0 则说明还没执行 f，转入慢路径执行；
 * 慢路径执行时，先加锁，再次判断`done`是否为 0，避免再加锁期间 f 被其他 goroutine 执行完成；
 * 采用 defer 函数使`done`原子加一，再执行 f 函数，即使函数 f panic 了，`done` 的加一操作也能执行成功；
-* <span style="color: red;">**采用互斥锁而不是 cas 的原因是保证`Done`返回时，函数 f 一定是执行完成的；
-  * 互斥锁能够让其他 goroutine 阻塞等待，阻塞结束后 f 一定是执行完成的**</span>；
+* <span style="color: red;">**采用互斥锁而不是 cas 的原因是保证`Done`返回时，函数 f 一定是执行完成的**</span>；
+  * <span style="color: red;">**互斥锁能够让其他 goroutine 阻塞等待，阻塞结束后 f 一定是执行完成的**</span>；
   * 其他 goroutine 通过 cas 获取不到值时，则是直接返回，此时 f 可能还没有执行完成；
