--- a/docs/01.语言/01.Go/05.Sync.Map.md
+++ b/docs/01.语言/01.Go/05.Sync.Map.md
@@ -471,4 +471,4 @@ func (m *Map) dirtyLocked() {
 * 发生在往 dirty map 中存储值时，当 dirty map 提升为 read map 后被置为 nil，为了保证下次能够正常提升为 read map 需要对 read map 中未删除的数据进行一次拷贝；
 * 在拷贝 read map 时，将为 nil 的 entry 设为 expunged，<span style="color: red;">**以便再次写入，当添加到 dirty map 时能够同步更新 read map 中的 entry** </span>；
 
-<!-- ![Alt text](image.png) -->
+<!-- ![Alt text](/img/sync.map.1.png) -->
