--- a/docs/01.语言/01.Go/12.sync.Pool.md
+++ b/docs/01.语言/01.Go/12.sync.Pool.md
@@ -22,11 +22,11 @@ author:
 * Pool 首次使用后不得被复制；
 
 ## 二、基本原理
-* 根据当前 P 的个数，即默认是 CPU 核数或是用户自定义的核数，Pool 为每个 P 分配一个私有对象和共享对象的结构体，这些结构体组成一个数组；
+* 根据当前 P 的个数，即默认是 CPU 核数或是用户自定义的核数，Pool 为每个 P 分配一个私有对象和共享对象的结构体，下图中 `poolLocalInternal`，多个`poolLocalInternal`结构体组成一个数组；
   * 私有对象可以直接存储该 Pool 需要存储的临时对象，每个 P 都只能对自己的私有对象进行存取，无权访问其他 P 的私有对象；
-  * 共享对象是一个双端队列，队列的元素是一个个长度为 2 的幂的环，且后一个是前一个的两倍长，环中存储的也是 Pool 需要存储的临时对象；
-  * 每个 P 都是自己共享对象的生产者，都是其他 P 共享对象的消费者；
+  * 共享对象是一个双端队列，队列的元素是一个个长度为 2 的幂的环，且后一个是前一个的两倍长，环中存储的也是 Pool 需要存储的临时对象，如下图中右侧的环；
   * 对于共享对象的双端队列，生产者可以从头部的环存取临时对象，消费者只能从尾部的环取临时对象，即每个 P 可以对自己的共享对象的双端队列头部进行读取，对其他 P 的共享对象的双端队列的尾部进行取；
+  * 每个 P 都是自己共享对象的生产者，都是其他 P 共享对象的消费者，如下图中 P0 能够从自己的 share 所指向的队列的 head 处进行读写数据，P1、P2、P3 只能从 P0 的 share 所指向的队列的 tail 处读数据；
 * 根据 GMP 模型，每个 P 上可以运行多个 G，在 G 需要去 Pool 中存取临时对象时，会将 G 与 P 绑定，并按照 P 的序号去数组中取其对应的结构体对象，这样避免了多线程之间的竞争；
 
 ![sync-pool](https://jsd.cdn.zzko.cn/gh/erlangtui/img-bed@master/go/sync-pool.53s0d4fij474.png)
@@ -110,7 +110,6 @@ type dequeueNil *struct{}
 ##### (2) poolDequeue.unpack
 ::: details
 ```go
-// 从 64 位 ptrs 中解出 32 位 head, tail 值
 func (d *poolDequeue) unpack(ptrs uint64) (head, tail uint32) {
 	const mask = 1<<dequeueBits - 1
 	head = uint32((ptrs >> dequeueBits) & mask) // 右移 32 位后与 32 个 1 与运算，并 32 位截断
@@ -119,10 +118,11 @@ func (d *poolDequeue) unpack(ptrs uint64) (head, tail uint32) {
 }
 ```
 :::
+* 从 64 位 ptrs 中解出 32 位 head, tail 值；
+
 ##### (3) poolDequeue.pack
 ::: details
 ```go
-// 将 32 位 head, tail 值打包为 64 位值
 func (d *poolDequeue) pack(head, tail uint32) uint64 {
 	const mask = 1<<dequeueBits - 1
 	return (uint64(head) << dequeueBits) |
@@ -130,6 +130,8 @@ func (d *poolDequeue) pack(head, tail uint32) uint64 {
 }
 ```
 :::
+* 将 32 位 head, tail 值打包为 64 位值；
+
 ##### (4) poolDequeue.pushHead
 ::: details
 ```go
