--- a/docs/01.语言/01.Go/12.sync.Pool.md
+++ b/docs/01.语言/01.Go/12.sync.Pool.md
@@ -32,6 +32,9 @@ author:
 ![sync-pool](https://jsd.cdn.zzko.cn/gh/erlangtui/img-bed@master/go/sync-pool.53s0d4fij474.png)
 
 ## 三、基本用法
+### 1，应用场景
+* 减少内存分配和垃圾回收压力：对于某些需要频繁创建和销毁对象的业务场景，使用 sync.Pool 可以有效减少内存分配和垃圾回收的压力，避免重复创建和销毁，提高系统的响应速度和性能稳定性；
+### 2，简单示例
 ::: details
 ```go
 package main
@@ -119,7 +122,6 @@ func (d *poolDequeue) unpack(ptrs uint64) (head, tail uint32) {
 ```
 :::
 * 从 64 位 ptrs 中解出 32 位 head, tail 值；
-
 ##### (3) poolDequeue.pack
 ::: details
 ```go
@@ -131,7 +133,6 @@ func (d *poolDequeue) pack(head, tail uint32) uint64 {
 ```
 :::
 * 将 32 位 head, tail 值打包为 64 位值；
-
 ##### (4) poolDequeue.pushHead
 ::: details
 ```go
@@ -165,6 +166,7 @@ func (d *poolDequeue) pushHead(val interface{}) bool {
 }
 ```
 :::
+
 ##### (5) poolDequeue.popHead
 ::: details
 ```go
